examples/type_system/failing/125_string_interpolation_missing_close_brace.flx
let msg = "Hello #{name"
let after = 3
